fixed typeform on mobile

--- a/index.css
+++ b/index.css
@@ -250,6 +250,15 @@ img{
   color: black;
   text-align: center;
 }
+
+#contact-container p {
+	width: 100%;
+  text-align: center;
+  font-family: "Arvo";
+  font-size: 28px;
+  margin-bottom: 0px;
+  margin-top: 20px;
+}
 /**************** End about content *************/
 
 /* Projects Content */
